--- a/algo/CMakeLists.txt
+++ b/algo/CMakeLists.txt
@@ -28,5 +28,6 @@ ENDFOREACH(COMPONENT)
 
 SET(LIBRARY_SET ${COMPONENTS} ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} ${QT_QTXML_LIBRARY})
 
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
 ADD_EXECUTABLE(${PROJECT_NAME} AFDX_DESIGN.cpp)
 TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${LIBRARY_SET})
